connexion et sign in

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,9 @@ flutter:
      - assets/logo.png
      - assets/fond-OK.jpg
      - assets/fond.jpg
+     - assets/Contexte2-OK.png
+     - assets/Thales1.png
+     - assets/thales2.png
 
 
 
